one call will get the recurring toods and embed them in the todoLists