@@ -1,5 +1,6 @@
 package com.mathfactmissions.teacherscheduler.service;
 
+import com.mathfactmissions.teacherscheduler.dto.todo.response.TodoResponse;
 import com.mathfactmissions.teacherscheduler.dto.todoList.response.TodoListResponse;
 import com.mathfactmissions.teacherscheduler.model.TodoList;
 import com.mathfactmissions.teacherscheduler.model.User;
@@ -7,14 +8,15 @@ import com.mathfactmissions.teacherscheduler.repository.TodoListRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TodoListService {
     
     private final TodoListRepository todoListRepository;
+    private final RecurrencePatternService recurrencePatternService;
     private final UserService userService;
     
     public TodoList createNewList(UUID userId, String listName) {
@@ -43,10 +45,44 @@ public class TodoListService {
         User user = userService.findById(userId)
             .orElseThrow(() -> new RuntimeException("No user found"));
         
-        List<TodoList> todoLists = todoListRepository.findAllByUserOrderByUpdatedAtDesc(user)
+        List<TodoList> lists = todoListRepository.findAllByUserOrderByUpdatedAtDesc(user)
             .orElseThrow(() -> new RuntimeException("no lists found"));
         
-        return todoLists.stream().map(TodoListResponse::fromEntity).toList();
+        // Fetch next occurrences for all patterns
+        List<TodoResponse> nextOccurrences = recurrencePatternService.getNextOccurrenceForEachPattern(userId);
+        
+        // Group occurrences by todoListId
+        Map<UUID, List<TodoResponse>> occurrencesByList = nextOccurrences.stream()
+            .collect(Collectors.groupingBy(TodoResponse::listId));
+        
+        // Build response, merging next occurrences into their respective lists
+        return lists.stream()
+            .map(list -> {
+                List<TodoResponse> regularTodos = list.getTodos().stream()
+                    .map(TodoResponse::fromEntity)
+                    .collect(Collectors.toList());
+                
+                // Merge in next occurrences for this list
+                List<TodoResponse> recurring = occurrencesByList
+                    .getOrDefault(list.getId(), Collections.emptyList());
+                
+                regularTodos.addAll(recurring);
+                
+                // Sort by dueDate
+                regularTodos.sort(Comparator.comparing(
+                    TodoResponse::dueDate,
+                    Comparator.nullsLast(Comparator.naturalOrder())
+                ));
+                
+                return TodoListResponse.builder()
+                    .id(list.getId())
+                    .listName(list.getListName())
+                    .todos(regularTodos)
+                    .build();
+            })
+            .toList();
+
+//        return todoLists.stream().map(TodoListResponse::fromEntity).toList();
     }
     
     
